whoami/02-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
  annotations:
    kubernetes.io/ingress.class: "traefik-internal"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.cert.containous.cloud`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    secretName: whoami-cert

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: powpow
  namespace: whoami
  annotations:
    kubernetes.io/ingress.class: "traefik-internal"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`powpow.cert.containous.cloud`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    secretName: powpow-cert
